tests/undefined-name.stderr
error: cannot find `foo`
  ┌─ test:1:1
  │
1 │ foo
  │ ^^^ this name is not defined
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/undefined-name

